# news-analyst-agent

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  alembic.ini  app_ui.py  docker-compose.yml  pyproject.toml  pytest.ini  run_migrations.sh
alembic/: env.py
alembic/versions/: 615ffe033a5c_initial_migration.py
news_analyst_agent/: config.py  main.py
news_analyst_agent/agents/: news_agent.py  news_analyst_prompts.py  utils.py
news_analyst_agent/api/: auth.py  chat_agent.py  health.py  retrieve_db.py
news_analyst_agent/db/: database.py  init_db.py  models.py  utils.py
news_analyst_agent/tasks/: cleanup.py
news_analyst_agent/tools/: ddg_search.py  yfinance_news.py
notebooks/: check_db.ipynb  test_news_agent.ipynb  test_tool.ipynb
tests/integration/: test_endpoints.py
tests/unit/: test_agent.py  test_news_tools.py
