[tool.poetry]
name = "news-analyst-agent"
version = "0.1.0"
description = ""
authors = ["Alex2Yang97 <zy2494@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.15"
fastapi = {extras = ["standard"], version = "^0.115.8"}
langchain-openai = "^0.3.1"
yfinance = "^0.2.52"
langchain-community = "^0.3.15"
langgraph = "^0.2.66"
duckduckgo-search = "^7.2.1"
langchain-ollama = "^0.2.2"
loguru = "^0.7.3"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
pyjwt = "^2.10.1"
uvicorn = "^0.34.0"
greenlet = "^3.1.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
python-multipart = ">=0.0.18,<0.0.19"
chainlit = "^2.2.0"
apscheduler = "^3.11.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ruff = "^0.9.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable a larger set of rules for better code quality
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # Pylint
    "N",   # pep8-naming
    "D",   # pydocstyle
]

# Avoid enforcing specific docstring rules
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".ruff_cache",
    "__pypackages__",
    "dist",
    "build",
    ".venv",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.12
target-version = "py312"